@@ -27,7 +27,37 @@ class FamSkat::FamSkatImpl{
   }
   int FitNullModel(Matrix& Xnull, Matrix& y,
                    const EigenMatrix& kinshipU, const EigenMatrix& kinshipS) {
-    return this->lmm.FitNullModel(Xnull, y, kinshipU, kinshipS);
+    int ret = this->lmm.FitNullModel(Xnull, y, kinshipU, kinshipS);
+    if (ret) { // fitting failed
+      return ret;
+    }
+
+    G_to_Eigen(Xnull, &this->X);
+    G_to_Eigen(y,     &this->yMat);
+    
+    const double sigma2 = lmm.GetSigmaG2();
+    const double delta = lmm.GetDelta();
+    const Eigen::MatrixXf& U =  kinshipU.mat;
+    const Eigen::MatrixXf& lambda =  kinshipS.mat;
+
+    // P0 = Sigma - X * (X' * Sigma^{-1} * X)^{-1} * X'
+    Sigma = U *
+            (lambda.array() + delta).matrix().asDiagonal() *
+            U.transpose() * sigma2;
+    SigmaInv = U *
+               (lambda.array() + delta).inverse().matrix().asDiagonal() *
+               U.transpose() / sigma2;
+    
+    P0 = Sigma - X * (X.transpose() * SigmaInv * X).inverse() * X.transpose();
+
+    // calculate Sinv_resid
+    EigenMatrix tmp;
+    lmm.GetBeta(&tmp);
+    this->beta = tmp.mat;
+    Sinv_resid = SigmaInv *
+                 (yMat - X * beta);
+        
+    return 0;
   }
   int TestCovariate(Matrix& Xnull, Matrix& y, Matrix& Xcol, Vector& weight,
                     const EigenMatrix& kinshipU, const EigenMatrix& kinshipS) {
@@ -39,44 +69,23 @@ class FamSkat::FamSkatImpl{
     G_to_Eigen(weight, &this->weight);
     setupWeight(kinshipU, kinshipS, Xcol);
 
-    G_to_Eigen(Xnull, &this->X);
     G_to_Eigen(Xcol,  &this->G);
-    G_to_Eigen(y,     &this->yMat);
-
-    const double sigma2 = lmm.GetSigmaG2();
-    EigenMatrix tmp;
-    lmm.GetBeta(&tmp);
-    this->beta = tmp.mat;
-    const double delta = lmm.GetDelta();
-    const Eigen::MatrixXf& U =  kinshipU.mat;
-    const Eigen::MatrixXf& lambda =  kinshipS.mat;
+    this->wg = this->weight.asDiagonal() * this->G.transpose();
+    // const double delta = lmm.GetDelta();
+    // const Eigen::MatrixXf& U =  kinshipU.mat;
+    // const Eigen::MatrixXf& lambda =  kinshipS.mat;
+    
     // Sigma = U * (S + delta) * U' * sigma2
     // Q = || w^{1/2} * G' * Sigma^{-1} * (y - X * beta) ||
     //   = || w^{1/2} * G' * U * (S + delta)^{-1} * U' * (y - X * beta) /sigma2 ||
-    Q = (this->weight.asDiagonal() *
-         G.transpose() *
-         U *
-         (lambda.array() + delta).inverse().matrix().asDiagonal()  *
-         U.transpose() *
-         (yMat - X * beta) /
-         sigma2
-         ).col(0).squaredNorm();
-
-    // P0 = Sigma - X * (X' * Sigma^{-1} * X)^{-1} * X'
-    Eigen::MatrixXf Sigma = U *
-                            (lambda.array() + delta).matrix().asDiagonal() *
-                            U.transpose() * sigma2;
-    Eigen::MatrixXf SigmaInv = U *
-                               (lambda.array() + delta).inverse().matrix().asDiagonal() *
-                               U.transpose() / sigma2;
-
-    Eigen::MatrixXf k = this->weight.asDiagonal() *
-                        G.transpose() *
-                        SigmaInv;
-    Eigen::MatrixXf P0 = Sigma - X * (X.transpose() * SigmaInv * X).inverse() * X.transpose();
-
+    // Q = (this->weight.asDiagonal() *
+    //      G.transpose() *
+    //      Sinv_resid
+    //      ).col(0).squaredNorm();
+    Q = (wg * Sinv_resid).col(0).squaredNorm();
+    
     Eigen::SelfAdjointEigenSolver<Eigen::MatrixXf> es;
-    es.compute( k * P0 * k.transpose());
+    es.compute( wg * P0 * wg.transpose());
 
 #ifdef DEBUG
     std::ofstream kin("kin");
@@ -109,6 +118,88 @@ class FamSkat::FamSkatImpl{
     return 0;
 
   }
+
+  double GetPvalue() const {return this->pValue;};
+
+  double GetQ() const {return this->Q;};
+ private:
+  void setupWeight(const EigenMatrix& kinshipU, const EigenMatrix& kinshipS,
+                   Matrix& geno) {
+    const int p = geno.cols;
+    this->weight.resize(p);
+    for (int i = 0; i < p; ++i) {
+      double af = lmm.FastGetAF(kinshipU, kinshipS, geno, i);
+      this->weight[i] =  gsl_ran_beta_pdf(af, this->beta1, this->beta2);  /// default SKAT use beta(MAF, 1, 25)
+    }
+  }
+ private:
+  Eigen::VectorXf weight;     // p by 1 matrix (p: number of variant) NOTE: not squared as the paper notation
+  Eigen::MatrixXf X;
+  Eigen::MatrixXf G;
+  Eigen::MatrixXf yMat;
+  Eigen::MatrixXf beta;
+
+  //Eigen::MatrixXf K;        // G * W * G'
+  // Eigen::MatrixXf K_sqrt;     // W^{0.5} * G' ----> K = K_sqrt' * K_sqrt
+  Eigen::VectorXf w_sqrt;     // W^{0.5} * G' ----> K = K_sqrt' * K_sqrt
+  Eigen::MatrixXf P0;         // V - VX ( X' V X)^{-1} X V
+  // P0 = Sigma - X * (X' * Sigma^{-1} * X)^{-1} * X'
+  Eigen::VectorXf res;        // residual
+  Eigen::MatrixXf Sigma;      // U * (S+delta) * U' * sigma^2
+  Eigen::MatrixXf SigmaInv;   // U * (S+delta)^(-1) * U' / sigma^2
+  Eigen::MatrixXf wg;         // w * g'  =>  p by n matrix
+  Eigen::MatrixXf Sinv_resid; // SigmaInv * (y - x * beta) => n by 1 matrix
+  
+  FastLMM lmm;
+
+  double beta1;
+  double beta2;
+
+  int nPeople;
+  int nMarker;
+  int nCovariate;
+  MixtureChiSquare mixChiSq;
+
+  double pValue;
+  double Q;
+
+};
+
+//////////////////////////////////////////////////
+// FamSkat class
+FamSkat::FamSkat() {
+  this->skatImpl =  new FamSkatImpl;
+}
+FamSkat::~FamSkat() {
+  delete this->skatImpl;
+}
+int FamSkat::FitNullModel(Matrix& Xnull, Matrix& y,
+                          const EigenMatrix& kinshipU, const EigenMatrix& kinshipS) {
+  return this->skatImpl->FitNullModel(Xnull, y, kinshipU, kinshipS);
+}
+int FamSkat::TestCovariate(Matrix& Xnull, Matrix& y, Matrix& Xcol, Vector& weight,
+                           const EigenMatrix& kinshipU, const EigenMatrix& kinshipS) {
+  return this->skatImpl->TestCovariate(Xnull, y, Xcol, weight, kinshipU, kinshipS);
+}
+
+// void FamSkat::Reset() {
+//   this->skatImpl->Reset();
+// }
+
+// double FamSkat::GetQFromPermutation();
+//   return this->skatImpl->GetQFromNewResidual(res_G);
+// }
+
+double FamSkat::GetPvalue() const //  {return this->pValue;};
+{
+  return this->skatImpl->GetPvalue();
+}
+
+double FamSkat::GetQ() const // {return this->Q;};
+{
+  return this->skatImpl->GetQ();
+}
+
 #if 0
   int Fit(Vector & res_G,   // residual under NULL -- may change when permuting
           Vector& v_G,      // variance under NULL -- may change when permuting
@@ -194,79 +285,3 @@ class FamSkat::FamSkatImpl{
 
   //   return Q;
   // }
-
-  double GetPvalue() const {return this->pValue;};
-
-  double GetQ() const {return this->Q;};
- private:
-  void setupWeight(const EigenMatrix& kinshipU, const EigenMatrix& kinshipS,
-                   Matrix& geno) {
-    const int p = geno.cols;
-    this->weight.resize(p);
-    for (int i = 0; i < p; ++i) {
-      double af = lmm.FastGetAF(kinshipU, kinshipS, geno, i);
-      this->weight[i] =  gsl_ran_beta_pdf(af, this->beta1, this->beta2);  /// default SKAT use beta(MAF, 1, 25)
-    }
-  }
- private:
-  Eigen::VectorXf weight;     // p by 1 matrix (p: number of variant) NOTE: not squared as the paper notation
-  Eigen::MatrixXf X;
-  Eigen::MatrixXf G;
-  Eigen::MatrixXf yMat;
-  Eigen::MatrixXf beta;
-
-  //Eigen::MatrixXf K;        // G * W * G'
-  // Eigen::MatrixXf K_sqrt;     // W^{0.5} * G' ----> K = K_sqrt' * K_sqrt
-  Eigen::VectorXf w_sqrt;     // W^{0.5} * G' ----> K = K_sqrt' * K_sqrt
-  Eigen::MatrixXf P0;         // V - VX ( X' V X)^{-1} X V
-  Eigen::VectorXf res;        // residual
-
-  FastLMM lmm;
-
-  double beta1;
-  double beta2;
-
-  int nPeople;
-  int nMarker;
-  int nCovariate;
-  MixtureChiSquare mixChiSq;
-
-  double pValue;
-  double Q;
-
-};
-
-//////////////////////////////////////////////////
-// FamSkat class
-FamSkat::FamSkat() {
-  this->skatImpl =  new FamSkatImpl;
-}
-FamSkat::~FamSkat() {
-  delete this->skatImpl;
-}
-int FamSkat::FitNullModel(Matrix& Xnull, Matrix& y,
-                          const EigenMatrix& kinshipU, const EigenMatrix& kinshipS) {
-  return this->skatImpl->FitNullModel(Xnull, y, kinshipU, kinshipS);
-}
-int FamSkat::TestCovariate(Matrix& Xnull, Matrix& y, Matrix& Xcol, Vector& weight,
-                           const EigenMatrix& kinshipU, const EigenMatrix& kinshipS) {
-  return this->skatImpl->TestCovariate(Xnull, y, Xcol, weight, kinshipU, kinshipS);
-}
-
-// void FamSkat::Reset() {
-//   this->skatImpl->Reset();
-// }
-
-// double FamSkat::GetQFromPermutation();
-//   return this->skatImpl->GetQFromNewResidual(res_G);
-// }
-
-double FamSkat::GetPvalue() const //  {return this->pValue;};
-{
-  return this->skatImpl->GetPvalue();
-}
-
-double FamSkat::GetQ() const // {return this->Q;};
-{
-  return this->skatImpl->GetQ();
-}
