@@ -1,3 +1,8 @@
+2015-03-23  Xiaowei Zhan  <zhanxw@dumbo.csgstat.sph.umich.edu>
+
+	* Improve FamSkat speed
+	* Fix outputs for FpTest
+
 2015-03-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Support dosage (vcf2kinship)
